--- a/src/main/resources/templates/Result.html
+++ b/src/main/resources/templates/Result.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../static/css/header.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
     <title>Table with Random Numbers</title>
 </head>
 <body>
-
+<header th:fragment="Header">
+    <h1>Result Page</h1>
+</header>
+<main>
+    main tag.
+</main>
+<footer th:fragment="Footer">
+    Sheridan College&nbsp;&nbsp;
+    <span class='hart'>&#9825;</span>&nbsp;&nbsp;
+    <span th:text="${#dates.createNow()}">February 6, 2024</span>
+</footer>
 </body>
 </html>
